--- a/app/views/houses/_room_fields.erb
+++ b/app/views/houses/_room_fields.erb
@@ -1,8 +1,23 @@
+<style>
+  .new-room{
+    padding-right: 15px;
+    background-color: rgba(223, 223, 223, 0.62);
+    border-radius: 5px;
+    border-color: rgba(152, 152, 152, 0.66);
+  }
+
+</style>
 <div class="nested-fields">
+<div class="col-md-4">
+  <div class="new-room  well color-well">
 <h3>New Room</h3>
+    <div style="padding: 5%">
 <hr>
 <%= f.input :name %>
 <hr>
+    </div>
 
 <%= link_to_remove_association "Remove room", f, class: "btn btn-danger" %>
+  </div>
+  </div>
 </div>
