--- a/app/views/houses/new.html.erb
+++ b/app/views/houses/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New House</h1>
 
+<div class="well">
+  <h1>New House</h1>
+</div>
+
+<div class="container">
 <%= render 'form', house: @house %>
 
 <%= link_to 'Back', houses_path %>
+</div>
