--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,5 +1,10 @@
 
-<p id="notice"><%= notice %></p>
+<%unless notice.nil?%>
+  <div class="alert alert-info">
+    <strong>Info!</strong> <%= notice %>
+  </div>
+<%end%>
+
 <table>
   <thead>
     <tr>
@@ -8,19 +13,39 @@
   </thead>
 
   <tbody>
-    <% @houses.each do |house| %>
-          <%= house.name %>
-          <%= house.address %>
 
-      <tr>
-        <td><%= link_to 'Show', house %></td>
-        <td><%= link_to 'Edit', edit_house_path(house) %></td>
-        <td><%= link_to 'Destroy', house, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+  <%if user_signed_in? %>
+  <div class="container">
+    <% @houses.each do |house| %>
+
+        <div class="jumbotron">
+          <h1 class="display-3"><%= house.name %></h1>
+          <p class="lead"><%= house.address %></p>
+          <hr class="my-4">
+          <p class="lead">
+            <%= link_to 'Show', house, class:"btn btn-primary btn-lg" %>
+            <%= link_to 'Edit', edit_house_path(house), class:"btn btn-info btn-lg" %>
+            <%= link_to 'Destroy', house, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger btn-lg", style: "float:right"%>
+          </p>
+        </div>
+      <% end %>
+  <%else%>
+      <div class="container">
+      <div class="jumbotron">
+        <h2 class="display-3">Please login to proceed.</h2>
+
+        <hr class="my-4">
+        <p class="lead">
+          <%= link_to 'Login', user_session_path, class:"btn btn-primary btn-lg"%>
+        </p>
+      </div>
+      </div>
+
     <% end %>
+  </div>
   </tbody>
+  </div>
 </table>
 
 <br>
 
-<%= link_to 'New House', new_house_path %>
