--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
+<%= link_to 'Invite', new_user_invitation_path(house_id: @house.id), class:"btn btn-primary" %>
 
 <%= link_to 'Edit', edit_house_path(@house) %> |
 <%= link_to 'Back', houses_path %>
