--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,14 +25,18 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="active"> <%= link_to root_path do %> Home<span class="sr-only">(current)</span><%end%></li>
+          <% if user_signed_in? %>
+          <li> <%= link_to 'New house', new_house_path %> </li> <%end%>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
+          <%unless user_signed_in?%>
+            <li><%= link_to 'Login', user_session_path %></li>
+          <% end %>
 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to 'Invite', new_user_invitation_path %></li>
               <li><%= link_to 'Profile', edit_user_registration_path %></li>
               <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
             </ul>
