--- a/app/views/users/invitations/new.html.erb
+++ b/app/views/users/invitations/new.html.erb
@@ -1,11 +1,21 @@
-<h2><%= t "devise.invitations.new.header" %></h2>
+<style>
+  .forma{
+    padding-left: 25%;
+    padding-right: 25%;
+  }
+</style>
 
-<%= simple_form_for resource, as: resource_name, url: invitation_path(resource_name), html: { method: :post} do |f| %>
+<h2 style="text-align: center; margin-bottom: 4%"><%= t "devise.invitations.new.header" %></h2>
+
+<div class="container forma">
+<%= simple_form_for resource, as: resource_name, url: invitation_path(resource_name),  method: :post do |f| %>
   <%= devise_error_messages! %>
-
+  <%= f.input :house_ids,as: :hidden, input_html: {value: @house_id} %>
 <% resource.class.invite_key_fields.each do |field| -%>
   <%= f.input field %>
 <% end -%>
 
 <%= f.button :submit, t("devise.invitations.new.submit_button") %>
 <% end %>
+
+</div>
